force-app/main/default/objects/User/fields/Elastix_Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>Elastix_Agent_Id__c</fullName>
    <externalId>true</externalId>
    <label>Elastix Agent Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>