force-app/main/default/objects/User/fields/Elastix_Password__c.field-meta.xml
<CustomField>
    <fullName>Elastix_Password__c</fullName>
    <label>Elastix Password</label>
    <length>200</length>
    <type>Text</type>
</CustomField>