force-app/main/default/objects/User/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <description>Tracking the User&apos;s Entity to calculate User License Costs</description>
    <label>Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>APAC FoodPanda</fullName>
            </value>
            <value>
                <fullName>AT Mjam</fullName>
            </value>
            <value>
                <fullName>AU Delivery Hero</fullName>
                <isActive>false</isActive>
                <label>AU Delivery Hero</label>
            </value>
            <value>
                <fullName>CH Foodarena</fullName>
                <isActive>false</isActive>
                <label>CH Foodarena</label>
            </value>
            <value>
                <fullName>CO ClickDelivery</fullName>
            </value>
            <value>
                <fullName>CZ Dame Jidlo</fullName>
            </value>
            <value>
                <fullName>DE Lieferheld / Pizza.de</fullName>
            </value>
            <value>
                <fullName>DHH Delivery Hero Holding</fullName>
            </value>
            <value>
                <fullName>FI Pizza Online</fullName>
            </value>
            <value>
                <fullName>HS HungerStation</fullName>
            </value>
            <value>
                <fullName>KR Yogiyo</fullName>
            </value>
            <value>
                <fullName>NetPincér.hu</fullName>
            </value>
            <value>
                <fullName>NO Foodora</fullName>
            </value>
            <value>
                <fullName>PL Pizza Portal</fullName>
                <isActive>false</isActive>
                <label>PL Pizza Portal</label>
            </value>
            <value>
                <fullName>RO FoodPanda</fullName>
            </value>
            <value>
                <fullName>SE Online Pizza</fullName>
            </value>
            <value>
                <fullName>UAE Talabat</fullName>
            </value>
            <value>
                <fullName>UK Hungryhouse</fullName>
                <isActive>false</isActive>
                <label>UK Hungryhouse</label>
            </value>
            <value>
                <fullName>UY Pedidosya</fullName>
            </value>
            <value>
                <fullName>Yemeksepeti</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>