force-app/main/default/objects/User/fields/IIQ_Location__c.field-meta.xml
<CustomField>
    <fullName>IIQ_Location__c</fullName>
    <description>Field that stores the Location/Country of users to create a User Adoption Report. It gets populated from a file.</description>
    <label>IIQ Location</label>
    <length>30</length>
    <type>Text</type>
</CustomField>