force-app/main/default/objects/User/fields/Last_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Change__c</fullName>
    <description>Tracking the User&apos;s Entity to calculate User License Costs</description>
    <label>Last Status Change</label>
    <type>Date</type>
</CustomField>