force-app/main/default/objects/User/fields/Migrated_By__c.field-meta.xml
<CustomField>
    <fullName>Migrated_By__c</fullName>
    <description>Data Migration user created to use for data migrations only
SP-2884</description>
    <label>Migrated By</label>
    <relationshipName>UserMigrated_By</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>