force-app/main/default/objects/User/fields/Migration_ID__c.field-meta.xml
<CustomField>
    <fullName>Migration_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Old SF Id</description>
    <externalId>true</externalId>
    <label>Migration ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>