force-app/main/default/objects/User/fields/Outsourcing_Company__c.field-meta.xml
<CustomField>
    <fullName>Outsourcing_Company__c</fullName>
    <label>Outsourcing Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Asean CC</fullName>
            </value>
            <value>
                <fullName>Asia Master</fullName>
            </value>
            <value>
                <fullName>CMX</fullName>
                <isActive>false</isActive>
                <label>CMX</label>
            </value>
            <value>
                <fullName>CMX - Skopje</fullName>
            </value>
            <value>
                <fullName>CMX - Tbilisi</fullName>
            </value>
            <value>
                <fullName>COS</fullName>
            </value>
            <value>
                <fullName>ExpertCloud</fullName>
            </value>
            <value>
                <fullName>Genex</fullName>
            </value>
            <value>
                <fullName>Ibex FPPK</fullName>
            </value>
            <value>
                <fullName>Ibex PH</fullName>
            </value>
            <value>
                <fullName>Ibex PK</fullName>
            </value>
            <value>
                <fullName>Market Mix</fullName>
            </value>
            <value>
                <fullName>MIBs</fullName>
            </value>
            <value>
                <fullName>MindBridge</fullName>
            </value>
            <value>
                <fullName>MMix</fullName>
            </value>
            <value>
                <fullName>Raya</fullName>
            </value>
            <value>
                <fullName>Sellbytel</fullName>
            </value>
            <value>
                <fullName>TCT</fullName>
            </value>
            <value>
                <fullName>TP</fullName>
            </value>
            <value>
                <fullName>VN</fullName>
            </value>
            <value>
                <fullName>Xceed</fullName>
            </value>
            <value>
                <fullName>XTENDO</fullName>
            </value>
            <value>
                <fullName>Yopeso</fullName>
                <isActive>false</isActive>
                <label>Yopeso</label>
            </value>
            <value>
                <fullName>Yopeso - Moldova</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>