force-app/main/default/objects/User/fields/UserID18__c.field-meta.xml
<CustomField>
    <fullName>UserID18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserID18</label>
    <type>Text</type>
</CustomField>