force-app/main/default/objects/User/validationRules/Global_FederationIdblankforAPIOnly.validationRule-meta.xml
<ValidationRule>
    <fullName>Global_FederationIdblankforAPIOnly</fullName>
    <active>true</active>
    <description>This validation rule is to throw an error when a Federation id is filled for an API User
SP-4357</description>
    <errorConditionFormula>If((CONTAINS(Profile.Name,&quot;API&quot;)) &amp;&amp;  FederationIdentifier!=null,true,false)</errorConditionFormula>
    <errorMessage>Federation Id should be blank when the profile is API</errorMessage>
</ValidationRule>