force-app/main/default/objects/User/validationRules/Global_FederationIdMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Global_FederationIdMandatory</fullName>
    <active>true</active>
    <description>Change Log
-Excluded API Profile from validation as per SP-4357</description>
    <errorConditionFormula>ISBLANK(FederationIdentifier)
&amp;&amp;
IsActive = true
&amp;&amp;
NOT(CONTAINS(Profile.Name,&quot;API&quot;))</errorConditionFormula>
    <errorMessage>Federation Id is mandatory</errorMessage>
</ValidationRule>