force-app/main/default/objects/User/listViews/Austria_CC_Roll_out_Users.listView-meta.xml
<ListView>
    <fullName>Austria_CC_Roll_out_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CountryCode__c</columns>
    <columns>CORE.USERS.COMPANY_NAME</columns>
    <columns>LIVEAGENT_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.USERTYPE</field>
        <operation>equals</operation>
        <value>S</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>startsWith</operation>
        <value>AT</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CREATED_BY_NAME</field>
        <operation>equals</operation>
        <value>Aisha Malik</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>3/15/2019 12:00 AM</value>
    </filters>
    <label>Austria CC Roll-out Users</label>
    <language>en_US</language>
    <sharedTo>
        <role>Global_Admin</role>
    </sharedTo>
</ListView>