force-app/main/default/objects/User/listViews/DE_Users.listView-meta.xml
<ListView>
    <fullName>DE_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>KNOWLEDGE_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CountryCode__c</field>
        <operation>equals</operation>
        <value>DE</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>DE Users</label>
    <language>en_US</language>
    <sharedTo>
        <group>Salesforce_Admin</group>
        <role>Global_Admin</role>
    </sharedTo>
</ListView>