force-app/main/default/objects/User/listViews/HU_Customer_Service.listView-meta.xml
<ListView>
    <fullName>HU_Customer_Service</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>startsWith</operation>
        <value>HU Customer Service</value>
    </filters>
    <label>HU Customer Service</label>
    <language>en_US</language>
    <sharedTo>
        <role>Global_Admin</role>
        <role>Global_Management</role>
    </sharedTo>
</ListView>