force-app/main/default/objects/User/listViews/Hungary_Users.listView-meta.xml
<ListView>
    <fullName>Hungary_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>HU Sales</value>
    </filters>
    <label>Hungary Users</label>
    <language>en_US</language>
    <sharedTo>
        <role>Global_Admin</role>
        <role>Global_Management</role>
    </sharedTo>
</ListView>