force-app/main/default/objects/User/listViews/Korea_Users.listView-meta.xml
<ListView>
    <fullName>Korea_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>LIVEAGENT_USER</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATED_BY_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>startsWith</operation>
        <value>Yogiyo</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Korea Users</label>
    <language>en_US</language>
    <sharedTo>
        <role>Global_Admin</role>
        <role>Yogiyo_Local_Admin</role>
    </sharedTo>
</ListView>